--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Java version
-        uses: actions/setup-java@v3.0.0
+        uses: actions/setup-java@v3.3.0
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.DISTRIBUTION }}
@@ -50,6 +50,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        working-directory: ./idk
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -78,4 +79,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: '*.jar'
+          package: '*.war'
