--- a/idk/pom.xml
+++ b/idk/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.treydev</groupId>
 	<artifactId>idk</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>idk</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
