--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build and deploy Critte Quest
 env:
 #   AZURE_WEBAPP_NAME: 'idk-critter'    # set this to the name of your Azure Web App
   JAVA_VERSION: '17'                  # set this to the Java version to use
-#   DISTRIBUTION: 'microsoft'           # set this to the Java distribution
+  DISTRIBUTION: 'microsoft'           # set this to the Java distribution
 
 on:
   push:
