--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -19,9 +19,8 @@ jobs:
 
     strategy:
       fail-fast: false
-#       matrix:
-# #         language: [ 'java', 'javascript' ]
-#         language: [ 'java' ]
+#      matrix:
+#        language: [ 'java', 'javascript' ]
 
     steps:
     - uses: actions/checkout@v3
@@ -36,7 +35,7 @@ jobs:
       with:
         languages: 'java'
         
-    - name: Perform Maven package
+    - name: Compiling Java
       working-directory: ./idk
       run: mvn compile
 
